<resources>
    <string name="app_name">Sensory Cloud Demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login</string>
    <string name="audio_fragment_label">Wakeword</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="enter_username">device name</string>
    <string name="enter_password">password</string>
    <string name="button_login">login</string>
    <string name="model_select">Select a model</string>
    <string name="enter_user_id">User ID</string>
    <string name="button_record">Validate Wakeword</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="button_video">Open Video Demos</string>
    <string name="button_audio">Open Audio Demos</string>
    <string name="button_capture">Begin Liveness Capture</string>
    <string name="video_fragment_label">Validate Liveness</string>
</resources>